Fixed priority in getting viewport dimensions, added new style for navigation buttons on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,7 @@ body {
   font-family: 'Oswald';
   height: 100%;
   -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
+  -moz-osx-font-smoothing: antialiased;
 }
 
 canvas {
@@ -66,6 +65,10 @@ canvas {
   -o-transition: width 250ms ease-in-out;
   -ms-transition: width 250ms ease-in-out;
   transition: width 250ms ease-in-out;
+}
+
+.navigation button svg {
+  display: none;
 }
 
 .navigation > button:hover {
@@ -218,4 +221,103 @@ button:focus {
   right: 8px;
   -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+  .navigation-wrap {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 56px;
+    white-space: nowrap;
+    background-color: #015249;
+  }
+
+  .navigation {
+    width: 100%;
+    height: 100%;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    position: relative;
+  }
+
+  .navigation > button {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.0);
+    padding: 0;
+    margin: 6px 12px 10px;
+  }
+
+  .navigation button span {
+    color: lightgray;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-transform: capitalize;
+    text-decoration: none;
+    text-align: center;
+    letter-spacing: 2px;
+    font-size: 10px;
+    font-family: 'Oswald';
+    margin: 0 auto;
+  }
+
+  .navigation button svg {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 24px;
+    height: 24px;
+    -webkit-transition:
+      width 600ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      height 600ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      top 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition:
+      width 600ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      height 600ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      top 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  .navigation button svg path {
+    fill: lightgray;
+    -webkit-transition: fill 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: fill 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  .navigation button:hover span {
+    color: gainsboro;
+    -webkit-transition: color 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: color 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  .navigation button:hover svg {
+    width: 26px;
+    height: 26px;
+    top: -2px;
+    -webkit-transition:
+      width 600ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      height 600ms cubic-bezier(0.075, 0.82, 0.165, 1)
+      top 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition:
+      width 600ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      height 600ms cubic-bezier(0.075, 0.82, 0.165, 1)
+      top 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  .navigation button:hover svg path {
+    fill: gainsboro;
+    -webkit-transition: fill 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: fill 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+  
 }
